ユーザー登録のメール送信処理を実装 (#11)
